--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1ab84e47-4439-41f0-bbfb-967e8e30f360"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
